JumpScript/tests/baselines/reference/superCallInConstructorWithNoBaseType.errors.txt
tests/cases/conformance/classes/constructorDeclarations/superCalls/superCallInConstructorWithNoBaseType.jump(3,9): error TS2335: 'super' can only be referenced in a derived class.
tests/cases/conformance/classes/constructorDeclarations/superCalls/superCallInConstructorWithNoBaseType.jump(9,9): error TS2335: 'super' can only be referenced in a derived class.


==== tests/cases/conformance/classes/constructorDeclarations/superCalls/superCallInConstructorWithNoBaseType.jump (2 errors) ====
    class C {
        constructor() {
            super(); // error
            ~~~~~
!!! error TS2335: 'super' can only be referenced in a derived class.
        }
    }
    
    class D<T> {
        public constructor(public x: T) {
            super(); // error
            ~~~~~
!!! error TS2335: 'super' can only be referenced in a derived class.
        }
    }